# flask-booky-store

./: .gitignore  README.md  app.py  forms.py  models.py  pyproject.toml  requirements.txt
instance/: books.db
migrations/versions/: d7873b9b0e8d_initial_migration.py
static/: main.css
templates/: add_author.html  add_book.html  author_details.html  authors_list.html  base.html  book.html  index.html  login.html  register.html
templates/components/: book_card.html  footer.html  navbar.html
